--- a/report.html
+++ b/report.html
@@ -30,11 +30,17 @@
 	  </script>
 	</section>
 
-	<section data-markdown>
-	  <script type="text/template">
-	    ### Барбара Окли
-	    ![](img/barbara_oakley.jpg)
-	  </script>
+	<section>
+	  <img src="img/barbara_oakley.jpg">
+	</section>
+
+	<section>
+	  Курс на курсере, обложка книги
+	</section>
+	
+
+	<section>
+	  <img src="img/sejnowski.jpg">	  
 	</section>
 
 	<section data-markdown>
@@ -46,18 +52,24 @@
 
 	<section data-markdown>
 	  <script type="text/template">
-	    ### Два режима мышление
+	    ### Два режима мышления
 	    * Сфокусированный режим (focused)
 	    * Рассеянный режим (diffuse)
-	    ![](img/two_modes.png)	    
 	  </script>
 	</section>
-
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    #### 
+	    ![](img/two_modes.png)	    	    
+	  </script>
+	</section>
+	
 	<section data-markdown>
 	  <script type="text/template">
 	    #### Сфокусированный режим (focused)
 	    * Сознательная концетрация внимания на предмете
-	    * Использование рабочей памяти
+	    * Активное использование рабочей памяти
  	    ![](img/focused.jpg)
 	  </script>
 	</section>
@@ -66,13 +78,22 @@
 	  <script type="text/template">
 	    #### Рассеянный режим (diffused)
 	    * Необходим когда учим что-то новое
+	    * Вид "с высоты птичьего полета"
+ 	    ![](img/diffused.jpg)	    
+	  </script>
+	</section>
+
+	<section data-markdown>
+	  <script type="text/template">
+	    * Мозг не может работать в двух режимах одновременно
+	    * Для лучшего обучения необходимо переключаться между режимами
 	  </script>
 	</section>
 	
 	<section data-markdown>
 	  <script type="text/template">
-	    * Мозг не может работать в двух режимах одновременно
-	    * Для лучшего обучения необходимо переключаться между режимами
+	    #### 	    
+ 	    ![](img/wall.jpg)
 	  </script>
 	</section>
 	
@@ -91,11 +112,9 @@
 	<section data-markdown>
 	  <script type="text/template">
 	    #### Прокрастинация
-
 	    how it works
 	  </script>
 	</section>
-	
 
 	<section data-markdown>
 	  <script type="text/template">
@@ -116,7 +135,47 @@
 	    # BELIEVE!!!
 	  </script>
 	</section>
+
+	<section data-markdown>
+	  <script type="text/template">
+	    #### 
+ 	    ![](img/tweet.png)
+	  </script>
+	</section>
 	
+	
+
+	<section data-markdown>
+	  <script type="text/template">
+	    #### Chunking
+
+	    how it works
+
+	    How to build chunks
+	  </script>
+	</section>
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    #### Chunking
+
+	    how it works
+
+	    How to build chunks
+	  </script>
+	</section>
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    #### English times example of chunks
+	  </script>
+	</section>
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    #### Mind maps
+	  </script>
+	</section>
 
 	<section data-markdown>
 	  <script type="text/template">
