--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 	</section>
 
 	<section>
-	  Курс на курсере, обложка книги
+	  <img src="img/mind-for-numbers.jpg">	  
 	</section>
-	
 
 	<section>
 	  <img src="img/sejnowski.jpg">	  
@@ -45,8 +44,7 @@
 
 	<section data-markdown>
 	  <script type="text/template">
-	    ### Какой-то чувак
-	    ![](img/ yawn.jpg)
+	    ![](img/yawn.jpg)
 	  </script>
 	</section>
 
@@ -54,14 +52,7 @@
 	  <script type="text/template">
 	    ### Два режима мышления
 	    * Сфокусированный режим (focused)
-	    * Рассеянный режим (diffuse)
-	  </script>
-	</section>
-	
-	<section data-markdown>
-	  <script type="text/template">
-	    #### 
-	    ![](img/two_modes.png)	    	    
+	    * Рассеянный режим (diffused)
 	  </script>
 	</section>
 	
@@ -70,6 +61,7 @@
 	    #### Сфокусированный режим (focused)
 	    * Сознательная концетрация внимания на предмете
 	    * Активное использование рабочей памяти
+	    * Отвлечения -- зло
  	    ![](img/focused.jpg)
 	  </script>
 	</section>
@@ -79,21 +71,22 @@
 	    #### Рассеянный режим (diffused)
 	    * Необходим когда учим что-то новое
 	    * Вид "с высоты птичьего полета"
+	    * Формируются новые нейронные связи
  	    ![](img/diffused.jpg)	    
 	  </script>
 	</section>
 
 	<section data-markdown>
 	  <script type="text/template">
-	    * Мозг не может работать в двух режимах одновременно
-	    * Для лучшего обучения необходимо переключаться между режимами
+	    #### 
+	    ![](img/two_modes.png)	    	    
 	  </script>
 	</section>
 	
 	<section data-markdown>
 	  <script type="text/template">
-	    #### 	    
- 	    ![](img/wall.jpg)
+	    * Мозг не может работать в двух режимах одновременно
+	    * Для лучшего обучения необходимо переключаться между режимами
 	  </script>
 	</section>
 	
@@ -105,31 +98,68 @@
 
 	<section data-markdown>
 	  <script type="text/template">
-	    #### Прокрастинация
+	    #### Chunking
+ 	    ![](img/chunks.png)
+	  </script>
+	</section>
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    #### 	    
+ 	    ![](img/english_times.jpg)
+	  </script>
+	</section>
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    ##### Как создавать чанки?
+	    * Практика! 
+	    * Понимание
+	    * Избегать переучивания
+	  </script>
+	</section>
+	
+	<section data-markdown>
+	  <script type="text/template">
+	    #### Mind maps
+ 	    ![](img/mind-map.svg)
+	  </script>
+	</section>
+
+	<section data-markdown>
+	  <script type="text/template">
+	    ### Anki
+ 	    ![](img/anki.png)
+	  </script>
+	</section>
+
+	<section data-markdown>
+	  <script type="text/template">
+	    #### 	    
+ 	    ![](img/wall.jpg)
 	  </script>
 	</section>
 
 	<section data-markdown>
 	  <script type="text/template">
 	    #### Прокрастинация
-	    how it works
 	  </script>
 	</section>
 
 	<section data-markdown>
 	  <script type="text/template">
 	    #### 
- 	    ![](img/power_of_habit.jpg)
+	    ![](img/power_of_habit.jpg)
 	  </script>
 	</section>
-	
+
 	<section data-markdown>
 	  <script type="text/template">
 	    #### 
- 	    ![](img/cue-routine-reword.jpg)
+	    ![](img/cue-routine-reword.jpg)
 	  </script>
 	</section>
-	
+
 	<section data-markdown>
 	  <script type="text/template">
 	    # BELIEVE!!!
@@ -139,43 +169,36 @@
 	<section data-markdown>
 	  <script type="text/template">
 	    #### 
- 	    ![](img/tweet.png)
-	  </script>
-	</section>
-	
-	
-
-	<section data-markdown>
-	  <script type="text/template">
-	    #### Chunking
-
-	    how it works
-
-	    How to build chunks
-	  </script>
-	</section>
-	
-	<section data-markdown>
-	  <script type="text/template">
-	    #### Chunking
-
-	    how it works
-
-	    How to build chunks
-	  </script>
-	</section>
-	
-	<section data-markdown>
-	  <script type="text/template">
-	    #### Mind maps
+	    ![](img/tweet.png)
 	  </script>
 	</section>
 
 	<section data-markdown>
 	  <script type="text/template">
-	    ### Anki
+	    #### Правила эффективного обучения
+	    * Постоянно тестировать себя
+	    * Создавать куски информации
+	    * Заниматься регулярно
+	    * Избегать переучивания
+	    * Использовать яркие метафоры
+	    * Начинать со сложных задач
+	    * Использовать разные подходы и техники во время обучения
 	  </script>
-	  
+	</section>
+
+	<section data-markdown>
+	  <script type="text/template">
+	    #### Как не надо учиться
+	    * Пассивное чтение
+	    * Подчеркивать все подряд
+	    * Только смотреть на решение и не пытаться его повторить
+	    * Учить все в последний момент
+	    * Сразу приступать к решению задач не изучив теорию
+	    * Постоянно отвлекаться
+	    * Недосыпать
+	  </script>
+	</section>
+
       </div>
     </div>
 
