--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 	  </script>
 	</section>
 
+	<section data-markdown>
+	  <script type="text/template">
+	    ![](img/sorry.jpg)
+	    ##### Sorry
+	  </script>
+	</section>
+
 	<section>
 	  <img src="img/barbara_oakley.jpg">
 	</section>
@@ -149,6 +156,13 @@
 	<section data-markdown>
 	  <script type="text/template">
 	    #### 
+ 	    ![](img/pomodoro.jpg)
+	  </script>
+	</section>
+
+	<section data-markdown>
+	  <script type="text/template">
+	    #### 
 	    ![](img/power_of_habit.jpg)
 	  </script>
 	</section>
@@ -163,6 +177,7 @@
 	<section data-markdown>
 	  <script type="text/template">
 	    # BELIEVE!!!
+	    ![](img/jesus.jpg)
 	  </script>
 	</section>
 
